# workflowreconstitutionCPP

./: .gitignore  CMakeLists.txt  README.md  build.sh  genTests.sh  paramtuning10000.csv  preliminary.csv  preliminaryExtra2.csv  prmTestExt.sh  rebuild.sh  roundTwo.sh  roundtwo.txt  roundtwoM05X025.txt  test.sh
Release/: CMakeCache.txt  Makefile  cmake_install.cmake  reconstitute
Release2/: CMakeCache.txt  Makefile  cmake_install.cmake
data/: factorioGenerator.cpp  imagemagickGenerator.cpp  results.txt  results0.txt  results01.txt
include/: NDEGame.h  common.h  fitness.h  generators.h  handletoolsets.h  main.h  ndetree.h
python/: generateDataGenerator.py  generateFactorioGenerator.py  generateRunScript.py  getfaster.py
python/dataprocessing/: countSolves.py  filterSolves.py
python/experiment/: pmut1.py
python/generators/: biotools.py  embossGenerator.py  factorioSolution.py  generatePreliminaryTests.py  imageMagickGenerator.py  roundTwoTests.py
src/: Generators.cpp  NDEGame.cpp  fitness.cpp  main.cpp  ndetree.cpp
src/datagenerators/: embossGenerator.cpp  factorioSolution.cpp  imagemagickGenerator.cpp
src/operators/: tournament.cpp
test/: testa.sh  testb.sh  testc.sh  testd.sh  teste.sh  testl.sh  tests.sh
